Add button for players and default. Add options module Added options module to sort out the event listeners on option bar Added player factory function.

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,8 @@ header{
 }
 .reset{
     display: flex;
+    justify-content: space-evenly;
     padding: 1rem 1rem;
     margin: auto;
-    justify-content: center;
+    
 }
